# scoria

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  REQUIREMENTS.md  client.c  controller.c
clients/: CMakeLists.txt
clients/allocator/: CMakeLists.txt  shm_allocator.hh  simple_allocator.cc
clients/simple/: CMakeLists.txt  simple_client.c
clients/spatter/: CMakeLists.txt  backend-support-tests.h  json.c  json.h  parse-args.c  parse-args.h  pcg_basic.c  pcg_basic.h  sgtype.h  sp_alloc.c  sp_alloc.h  spatter_client.c  unused.h
include/: client.h  config.h  controller.h  scoria.h
include/client/: client_cleanup.h  client_init.h  client_memory.h  client_place_requests.h  client_read_location.h  client_wait_requests.h
include/controller/: controller_cleanup.h  controller_handle_requests.h  controller_init.h  controller_write_location.h
include/posix/: posix_sm.h
include/shared/: kernels.h  mytimer.h  parse-args.h  request.h  sp_alloc.h  utils.h
include/uthash/: uthash.h
scripts/: plot_test_bw.py  run_test_bw.py  scoria-vs-ume.sh  simple_test_bw.py  tests_bw.py
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client_cleanup.c  client_init.c  client_memory.c  client_place_requests.c  client_read_location.c  client_wait_requests.c
src/controller/: CMakeLists.txt  controller_cleanup.c  controller_handle_requests.c  controller_init.c  controller_write_location.c
src/posix/: CMakeLists.txt  posix_sm.c
src/shared/: CMakeLists.txt  mytimer.c  request.c  utils.c
src/shm_malloc/: CMakeLists.txt  atomic.h  malloc.c  malloc.h  shm_malloc.h  tshm1.c  tshm2.c
src/shm_malloc/make/: Makefile
tests/: CMakeLists.txt  backend-support-tests.c  calibrate.c  json.c  parse-args.c  test.c  test_spatter.c
